--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@heroicons/react": "^2.1.1",
     "@supabase/ssr": "^0.1.0",
     "@supabase/supabase-js": "^2.39.3",
+    "@vercel/analytics": "^1.1.3",
     "luxon": "^3.4.4",
     "next": "14.1.0",
     "react": "^18",
